--- a/vzorec.tex
+++ b/vzorec.tex
@@ -2,6 +2,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage[oznake]{omrezja}
 
+\pgfrealjobname{vzorec}
+
 \title{Omrežja za optimizacijske naloge}
 \author{Janoš Vidali}
 
@@ -176,6 +178,11 @@ Podajmo maksimalni pretok in minimalni prerez.
     \kolicina{g}{T}[2]{2}
 
     \dosezeno{S}
+    \dosezeno{b}
+    \dosezeno{c}
+    \dosezeno{d}
+    \dosezeno{a}
+    \dosezeno{e}
 \end{pretok}
 
 \end{document}
