--- a/vzorec.tex
+++ b/vzorec.tex
@@ -172,10 +172,11 @@ Podajmo maksimalni pretok in minimalni prerez.
     \kolicina{d}{T}[0]{2}[prerez]
     \kolicina{e}{g}[0]{2}[prerez]
     \kolicina{e}{T}[0]{5}[prerez]
-    \kolicina{f}{d}[8]{0}[nasprotna]
     \kolicina{f}{T}[3]{1}
-    \kolicina{g}{a}[3]{0}[nasprotna]
     \kolicina{g}{T}[2]{2}
+
+    \nasprotna{f}{d}
+    \nasprotna{g}{a}
 
     \dosezeno{S}
     \dosezeno{b}
