Eksplicitno nastavljena debelina kandidatov za vstop pri razvozih

--- a/omrezja.sty
+++ b/omrezja.sty
@@ -25,8 +25,8 @@
 
 \tikzstyle{drevo}=[very thick, red]
 \tikzstyle{izstopi}=[dashed]
-\tikzstyle{vstopi}=[blue]
-\tikzstyle{kandidat}=[green]
+\tikzstyle{vstopi}=[thick, blue]
+\tikzstyle{kandidat}=[thick, green]
 
 \tikzstyle{pot}=[very thick]
 \tikzstyle{prerez}=[zasicena, double]
