--- a/vzorec.tex
+++ b/vzorec.tex
@@ -99,6 +99,13 @@ ter izberimo vstopno in izstopno povezavo.
     \kandidat{f}{e}
 \end{razvoz}
 
+\makebox[\textwidth][c]{
+\begin{mreza}{2}{3}
+    \begin{razvoz*}{grafA}
+    \end{razvoz*}
+\end{mreza}
+}
+
 \clearpage
 
 \section{Problem maksimalnega pretoka in minimalnega prereza}
@@ -195,5 +202,12 @@ Podajmo maksimalni pretok in minimalni prerez.
     \dosezeno{a}
     \dosezeno{e}
 \end{pretok}
+
+\makebox[\textwidth][c]{
+\begin{mreza}{2}{3}
+    \begin{pretok*}{grafB}
+    \end{pretok*}
+\end{mreza}
+}
 
 \end{document}
